[gd_scene load_steps=3 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://src/UI/ListUI/ListUpgradeUI/ListUpgradeBoneHarvest/UpgradeBoneHarvestList.gd" type="Script" id=2]

[node name="UpgradeBoneHarvestList" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1646.0
margin_bottom = -988.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 70.0
margin_bottom = 92.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 8
alignment = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
margin_right = 70.0
margin_bottom = 64.0
texture = ExtResource( 1 )

[node name="ResearchButton" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 70.0
margin_bottom = 92.0
text = "Research"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_left = 74.0
margin_right = 274.0
margin_bottom = 88.0
size_flags_vertical = 0
custom_constants/separation = 43
alignment = 1

[node name="DescriptionLabel" type="Label" parent="VBoxContainer2"]
margin_right = 200.0
margin_bottom = 31.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "increase the amout of bone harvested"
autowrap = true

[node name="CostLabel" type="Label" parent="VBoxContainer2"]
margin_top = 74.0
margin_right = 200.0
margin_bottom = 88.0
size_flags_vertical = 1
text = "Cost : XXX bones"
